NewArchive/e9299995b8aed8610aa487421714e11f-7063104e283ed82d51a6fde7370c6e59/output
main.cpp: In function 'int main()':
main.cpp:15:15: error: call of overloaded 'foo(int)' is ambiguous
     foo<int>(3);
               ^
main.cpp:15:15: note: candidates are:
main.cpp:4:5: note: Ret foo(T&&) [with Ret = int; T = int]
 Ret foo(T&&) {
     ^
main.cpp:10:6: note: void foo(T&&) [with T = int]
 void foo(T&&) {
      ^
